--- a/ini/features.ini
+++ b/ini/features.ini
@@ -41,11 +41,13 @@ HAS_MARLINUI_U8GLIB                    = U8glib-HAL@~0.4.5
 HAS_(FSMC|SPI|LTDC)_TFT                = src_filter=+<src/HAL/STM32/tft> +<src/HAL/STM32F1/tft> +<src/lcd/tft_io>
 HAS_FSMC_TFT                           = src_filter=+<src/HAL/STM32/tft/tft_fsmc.cpp> +<src/HAL/STM32F1/tft/tft_fsmc.cpp>
 HAS_SPI_TFT                            = src_filter=+<src/HAL/STM32/tft/tft_spi.cpp> +<src/HAL/STM32F1/tft/tft_spi.cpp>
+DWIN_.+                                = src_filter=+<src/lcd/dwin>
+DWIN_CREALITY_LCD                      = src_filter=+<src/lcd/dwin/e3v2>
+DWIN_MARLINUI_.+                       = src_filter=+<src/lcd/dwin/marlin>
 I2C_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_i2c.cpp>
 SOFT_I2C_EEPROM                        = SlowSoftI2CMaster, SlowSoftWire=https://github.com/felias-fogg/SlowSoftWire/archive/master.zip
 SPI_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_spi.cpp>
 HAS_GRAPHICAL_TFT                      = src_filter=+<src/lcd/tft>
-DWIN_CREALITY_LCD                      = src_filter=+<src/lcd/dwin>
 IS_TFTGLCD_PANEL                       = src_filter=+<src/lcd/TFTGLCD>
 HAS_TOUCH_BUTTONS                      = src_filter=+<src/lcd/touch/touch_buttons.cpp>
 HAS_LCD_MENU                           = src_filter=+<src/lcd/menu>
